[gd_scene load_steps=4 format=3 uid="uid://cmhjsecm1oomq"]

[ext_resource type="Texture2D" uid="uid://dt0qt0nhm1ln4" path="res://assets/weapons/pistol2.png" id="1_0xlgs"]
[ext_resource type="Script" path="res://scenes/weapon/toy_pistol.gd" id="1_eos8i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1466w"]
radius = 6.0

[node name="ToyPistol" type="Node2D"]
script = ExtResource("1_eos8i")
bullet_speed = 100.0
weapon_range = 1000.0

[node name="WeaponPivot" type="Marker2D" parent="."]
position = Vector2(0, -36)

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(43, 6)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_0xlgs")

[node name="ShootPoint" type="Marker2D" parent="WeaponPivot"]
position = Vector2(59, 0)

[node name="FeetPivot" type="Marker2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetPivot"]
visible = false
position = Vector2(56, 0)
shape = SubResource("CircleShape2D_1466w")
debug_color = Color(0.25, 0.25, 0.25, 0.42)
